--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 node_modules
 .DS_Store
+# exclude Terraform directories and state files
+**/.terraform
+**/terraform.tfstate
+**/.terraform.lock.hcl
+**/terraform.tfstate.backup
